cmake_minimum_required(VERSION 3.12)
project(vocaloid_test)
set(CMAKE_CXX_STANDARD 14)
set(G_TEST "../third_party/gtest")
include_directories( ../vocaloid ../pcm_player "${G_TEST}/include")
link_directories("${G_TEST}/lib")
#aux_source_directory(. DIR_SRCS)
add_executable(${PROJECT_NAME} unit_test.cpp)
target_link_libraries(${PROJECT_NAME} pcm_player gtest)